[project]
name = "pragma-deployer"
version = "1.0.0"
description = "Deployment scripts for our Pragma Oracle."
authors = [{ name = "0xevolve", email = "matthias@pragmaoracle.com" }]
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "starknet-py==0.27.0",
    "python-dotenv>=1.0.0",
    "case-converter>=1.1.0",
    "click>=8.1.0",
    "pragma-sdk==2.8.12",
    "pragma-utils @ git+https://github.com/astraly-labs/pragma-sdk#subdirectory=pragma-utils",
]

[project.scripts]
deploy-pragma = "pragma_deployer.deploy_pragma:cli_entrypoint"
add-pairs = "pragma_deployer.add_pairs:cli_entrypoint"
register-publishers = "pragma_deployer.register_publishers:cli_entrypoint"
deploy-summary-stats = "pragma_deployer.deploy_summary_stats:cli_entrypoint"
deploy-randomness = "pragma_deployer.deploy_randomness:cli_entrypoint"
deploy-randomness-example = "pragma_deployer.deploy_randomness_example:cli_entrypoint"
deploy-mock-pool = "pragma_deployer.deploy_mock_pool:cli_entrypoint"
upgrade-pragma = "pragma_deployer.upgrade_pragma:cli_entrypoint"
remove-source = "pragma_deployer.remove_source:cli_entrypoint"
remove-publishers = "pragma_deployer.remove_publishers:cli_entrypoint"
register-vault-token = "pragma_deployer.register_tokenized_vault:cli_entrypoint"

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pragma_deployer"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "scripts",
    "pragma-oracle",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
